NIFI-15773 Cleaned ValidateJson and TestValidateJson
This closes #11083

Signed-off-by: David Handermann <exceptionfactory@apache.org>